--- a/package.json
+++ b/package.json
@@ -40,9 +40,14 @@
     "ember-data": "~3.10.0",
     "ember-export-application-global": "^2.0.0",
     "ember-faker": "^1.5.0",
+    "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.8.1",
+    "ember-parachute": "^1.0.2",
+    "ember-power-calendar": "^0.13.3",
+    "ember-power-calendar-luxon": "^0.1.8",
+    "ember-power-calendar-moment": "^0.1.7",
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.10.0",
